--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apollo-boost": "^0.4.9",
     "bootstrap": "^4.4.1",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.0.1",
